Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1403218: v1.1 Reminder Email not Formatted
 - Fixed bug 1357358: Columns to narrow between 'date' and '%' in small task list
 - Fixed bug 1364451: Site extras not displayed in pop-ups - v1.1.0-CVS
 - Added support for events overlspping into next day
 - Fixed bug 1314070: Some settings not required by Postgresql
 - Fixed bug 1402931: Search error (using mssql)
 - Added support for BLOBs for MSSQL DB
 - Added support for BLOBs for postgreSQL DB
 - Fixed bug 1403070: Icalclient doubles external events
 - Fixed bug 1398679: error in epeated event for 5th sunday
 - Fixed bug 1401625: ERROR message not be translated (Partial fix)
 - Fixed bug 1401426: Adding event time defaults to first work hour
 - Fixed bug 1401537: 'German Date' not properly displayed at week.php
 - Fixed bug 1400836: patch for SQL errors in current CVS
 - Fixed bug 1400400: adding a task - header cannot be translated cpl.
 - Fixed bug 1365600: 'unapproved events' are not properly explained
 - Merged task files into entry files
 - Added option to upload category icons
 = Fixed bug 1365219: Highlighted "today" changes too early - v1.1.0-CVS
 - Fixed bug 1397766: Tomorrow Report fails to This Week
 - Fixed bug 1387646: Repeated events are not shown repeatedly
 - Fixed bug 1386705: Two errors in install scripts (PostgreSQL)
 - Added option to disable small months
 - Added Previews to themes
 - Fixed bug 1375089: Repeating evens miss final day of repeat
 - Fixed bug 1379707: Repeating event ends one day early
 - Imlemented PATCH 1380867: improved ical support
 - Fixed bug  1385557: calendar inputs can cause crash
 - Added feature to email ics attachment to external participants
   This address bug 1384838 and RFE 1384842
 - Fixed bug 1385433: External Users not deleted with event
 - Changed 'Display Weekends' to affect all pages
 - Added support for themes
 - Added support for IBM DB2
 - Added support for binary objects for MySQL and SQLite.  This includes